FAQ: extra padding on bottom to prevent scrollback

--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -1,3 +1,7 @@
+#faq {
+  padding-bottom: 200px;
+}
+
 .questions {
   display: flex;
   align-items: center;
